# cocos2d-x

./: .gitignore  .gitmodules
cocos/: CMakeLists.txt
cocos/2d/: CCActionInterval.cpp  CCLabel.h  CCRenderTexture.cpp
cocos/3d/: CCMeshVertexIndexData.cpp
cocos/audio/: AudioEngine.cpp
cocos/audio/android/: AudioEngine-inl.cpp  AudioEngine-inl.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h
cocos/audio/apple/: AudioCache.h  AudioCache.mm  AudioEngine-inl.h  AudioEngine-inl.mm
cocos/audio/include/: AudioEngine.h  SimpleAudioEngine.h
cocos/audio/ios/: CDAudioManager.h  CDAudioManager.m  CDConfig.h  CocosDenshion.h  SimpleAudioEngine.mm  SimpleAudioEngine_objc.h  SimpleAudioEngine_objc.m
cocos/base/: CCConfiguration.h  CCDirector.cpp  CCDirector.h  ccConfig.h
cocos/editor-support/cocostudio/: Android.mk  CCActionFrame.cpp  CCComAudio.cpp  CCSSceneReader.cpp  CocoStudio.cpp  FlatBuffersSerialize.cpp  FlatBuffersSerialize.h
cocos/editor-support/cocostudio/ActionTimeline/: CSLoader.cpp
cocos/editor-support/cocostudio/WidgetReader/: WidgetReader.cpp
cocos/editor-support/spine/: Android.mk  CMakeLists.txt
cocos/editor-support/spine/src/spine/: SkeletonAnimation.cpp  SkeletonBatch.cpp  SkeletonData.cpp  SkeletonTwoColorBatch.cpp
cocos/network/: SocketIO.cpp
cocos/platform/: CCFileUtils.cpp  CCFileUtils.h  CCGLView.h
cocos/platform/android/: CCFileUtils-android.cpp  CCFileUtils-android.h
cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxEditBoxHelper.java  Cocos2dxGLSurfaceView.java  Cocos2dxHelper.java  Cocos2dxRenderer.java  Cocos2dxVideoHelper.java  Cocos2dxWebView.java  Cocos2dxWebViewHelper.java
cocos/platform/android/libcocos2dx/: build.gradle
cocos/platform/ios/: CCDirectorCaller-ios.mm  CCEAGLView-ios.mm
cocos/platform/win32/: CCFileUtils-win32.cpp
cocos/renderer/: CCQuadCommand.cpp
cocos/ui/: UIVideoPlayer-ios.mm  UIVideoPlayer.h  UIWebViewImpl-ios.mm  UIWidget.cpp
pba-external/gaf/: Android.mk  CMakeLists.txt  GAFFilterManager.cpp  GAFFilterManager.h  GAFMask.cpp  GAFMovieClip.cpp  GAFMovieClip.h  GAFObject.cpp  GAFObject.h  GAFShaderManager.cpp  GAFShaderManager.h  GAFSprite.cpp  GAFSprite.h  GAFTimeline.cpp  MySprite.cpp  MySprite.h
pba-external/spine/: Android.mk  CMakeLists.txt
pba-external/spine/include/spine/: SkeletonAnimation.h
pba-external/spine/src/spine/: IkConstraintTimeline.cpp  SkeletonJson.cpp  TransformConstraint.cpp
pba-external/zip_file/: build.gradle
pba-patches/: Artifact-patch.diff  AudioEngine-patch.diff  AudioEngineiOS1.diff  Button-patch.diff  Cocostudio.diff  ObbFix-patch.diff  ObbFix2-patch.diff  OpenGL.diff  OpenGL1.diff  SimpleAudioEngine-patch.diff  WKWebView.diff  director-patch.diff  rendertexture-patch.diff
tests/cpp-tests/Classes/SpineTest/: SpineTest.h
tests/cpp-tests/Classes/Sprite3DTest/: Sprite3DTest.h
tests/cpp-tests/Classes/TouchesTest/: TouchesTest.cpp
